@@ -1,4 +1,4 @@
-/* $Id: newdemo.c,v 1.12.2.1 2003-05-17 04:34:34 btb Exp $ */
+/* $Id: newdemo.c,v 1.12.2.2 2003-05-22 09:16:44 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -17,6 +17,9 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
  * Code to make a complete demo playback system.
  *
  * $Log: not supported by cvs2svn $
+ * Revision 1.12.2.1  2003/05/17 04:34:34  btb
+ * disabled althogdir stuff (shouldn't be needed w/physfs)
+ *
  * Revision 1.12  2003/03/18 02:31:16  btb
  * simplify DEMO_FILENAME macro
  *
@@ -751,6 +754,8 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #include <sys/types.h>
 #endif
 
+#include <physfs.h>
+
 #include "u_mem.h"
 #include "inferno.h"
 #include "game.h"
@@ -810,9 +815,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #include "controls.h"
 #include "d_io.h"
 #include "timer.h"
-
-#include "findfile.h"
-
+#include "physfsx.h"
 #ifdef EDITOR
 #include "editor/editor.h"
 #endif
@@ -923,15 +926,15 @@ byte First_time_playback=1;
 fix JasonPlaybackTotal=0;
 
 
-FILE *infile;
-FILE *outfile=NULL;
+PHYSFS_file *infile;
+PHYSFS_file *outfile = NULL;
 
 int newdemo_get_percent_done() {
 	if ( Newdemo_state == ND_STATE_PLAYBACK ) {
-		return (ftell(infile)*100)/Newdemo_size;
+		return (PHYSFS_tell(infile)*100)/Newdemo_size;
 	}
 	if ( Newdemo_state == ND_STATE_RECORDING ) {
-		return ftell(outfile);
+		return PHYSFS_tell(outfile);
 	}
 	return 0;
 }
@@ -971,8 +974,8 @@ void my_extract_shortpos(object *objp, shortpos *spp)
 int newdemo_read( void *buffer, int elsize, int nelem )
 {
 	int num_read;
-	num_read = fread( buffer,elsize,nelem, infile );
-	if (ferror(infile) || feof(infile))
+	num_read = PHYSFS_read(infile, buffer, elsize, nelem);
+	if (num_read < nelem || PHYSFS_eof(infile))
 		nd_bad_read = -1;
 
 	return num_read;
@@ -998,7 +1001,7 @@ int newdemo_write( void *buffer, int elsize, int nelem )
 	frame_bytes_written += total_size;
 	Newdemo_num_written += total_size;
 	Assert(outfile != NULL);
-	num_written = fwrite( buffer, elsize, nelem, outfile );
+	num_written = PHYSFS_write(outfile, buffer, elsize, nelem);
 	//if ((Newdemo_num_written > Newdemo_size) && !Newdemo_no_space) {
 	//	Newdemo_no_space=1;
 	//	newdemo_stop_recording();
@@ -3160,7 +3163,7 @@ int newdemo_read_frame_information()
 
 		case ND_EVENT_EOF: {
 			done=-1;
-			fseek(infile, -1, SEEK_CUR);        // get back to the EOF marker
+			PHYSFS_seek(infile, PHYSFS_tell(infile) - 1);        // get back to the EOF marker
 			Newdemo_at_eof = 1;
 			NewdemoFrameCount++;
 			break;
@@ -3188,7 +3191,7 @@ void newdemo_goto_beginning()
 {
 	//if (NewdemoFrameCount == 0)
 	//	return;
-	fseek(infile, 0, SEEK_SET);
+	PHYSFS_seek(infile, 0);
 	Newdemo_vcr_state = ND_STATE_PLAYBACK;
 	if (newdemo_read_demo_start(0))
 		newdemo_stop_playback();
@@ -3207,7 +3210,7 @@ void newdemo_goto_end()
 	ubyte energy, shield, c;
 	int i, loc, bint;
 
-	fseek(infile, -2, SEEK_END);
+	PHYSFS_seek(infile, PHYSFS_tell(infile) - 2);
 	nd_read_byte(&level);
 
 	if ((level < Last_secret_level) || (level > Last_level)) {
@@ -3223,12 +3226,12 @@ void newdemo_goto_end()
 	if (level != Current_level_num)
 		LoadLevel(level,1);
 
-	fseek(infile, -4, SEEK_END);
+	PHYSFS_seek(infile, PHYSFS_tell(infile) - 4);
 	nd_read_short(&byte_count);
-	fseek(infile, -2 - byte_count, SEEK_CUR);
+	PHYSFS_seek(infile, PHYSFS_tell(infile) - 2 - byte_count);
 
 	nd_read_short(&frame_length);
-	loc = ftell(infile);
+	loc = PHYSFS_tell(infile);
 	if (Newdemo_game_mode & GM_MULTI)
 		nd_read_byte(&Newdemo_players_cloaked);
 	else
@@ -3280,11 +3283,11 @@ void newdemo_goto_end()
 		nd_read_int(&(Players[Player_num].score));
 	}
 
-	fseek(infile, loc, SEEK_SET);
-	fseek(infile, -frame_length, SEEK_CUR);
+	PHYSFS_seek(infile, loc);
+	PHYSFS_seek(infile, PHYSFS_tell(infile) - frame_length);
 	nd_read_int(&NewdemoFrameCount);            // get the frame count
 	NewdemoFrameCount--;
-	fseek(infile, 4, SEEK_CUR);
+	PHYSFS_seek(infile, PHYSFS_tell(infile) + 4);
 	Newdemo_vcr_state = ND_STATE_PLAYBACK;
 	newdemo_read_frame_information();           // then the frame information
 	Newdemo_vcr_state = ND_STATE_PAUSED;
@@ -3298,9 +3301,9 @@ void newdemo_back_frames(int frames)
 
 	for (i = 0; i < frames; i++)
 	{
-		fseek(infile, -10, SEEK_CUR);
+		PHYSFS_seek(infile, PHYSFS_tell(infile) - 10);
 		nd_read_short(&last_frame_length);
-		fseek(infile, 8 - last_frame_length, SEEK_CUR);
+		PHYSFS_seek(infile, PHYSFS_tell(infile) + 8 - last_frame_length);
 
 		if (!Newdemo_at_eof && newdemo_read_frame_information() == -1) {
 			newdemo_stop_playback();
@@ -3309,9 +3312,9 @@ void newdemo_back_frames(int frames)
 		if (Newdemo_at_eof)
 			Newdemo_at_eof = 0;
 
-		fseek(infile, -10, SEEK_CUR);
+		PHYSFS_seek(infile, PHYSFS_tell(infile) - 10);
 		nd_read_short(&last_frame_length);
-		fseek(infile, 8 - last_frame_length, SEEK_CUR);
+		PHYSFS_seek(infile, PHYSFS_tell(infile) + 8 - last_frame_length);
 	}
 
 }
@@ -3506,7 +3509,7 @@ void newdemo_playback_one_frame()
 		else
 			frames_back = 1;
 		if (Newdemo_at_eof) {
-			fseek(infile, 11, SEEK_CUR);
+			PHYSFS_seek(infile, PHYSFS_tell(infile) + 11);
 		}
 		newdemo_back_frames(frames_back);
 
@@ -3677,15 +3680,15 @@ void newdemo_start_recording()
 	Newdemo_num_written = 0;
 	Newdemo_no_space=0;
 	Newdemo_state = ND_STATE_RECORDING;
-	outfile = fopen( DEMO_FILENAME, "wb" );
+	outfile = PHYSFS_openWrite(DEMO_FILENAME);
 
 #ifndef MACINTOSH
 	if (outfile == NULL && errno == ENOENT) {   //dir doesn't exist?
 #else
 	if (outfile == NULL) {                      //dir doesn't exist and no errno on mac!
 #endif
-		d_mkdir(DEMO_DIR); //try making directory
-		outfile = fopen( DEMO_FILENAME, "wb" );
+		PHYSFS_mkdir(DEMO_DIR); //try making directory
+		outfile = PHYSFS_openWrite(DEMO_FILENAME);
 	}
 
 	if (outfile == NULL)
@@ -3770,8 +3773,8 @@ void newdemo_stop_recording()
 	nd_write_byte(Current_level_num);
 	nd_write_byte(ND_EVENT_EOF);
 
-	l = ftell(outfile);
-	fclose(outfile);
+	l = PHYSFS_tell(outfile);
+	PHYSFS_close(outfile);
 	outfile = NULL;
 	Newdemo_state = ND_STATE_NORMAL;
 	gr_palette_load( gr_palette );
@@ -3822,11 +3825,11 @@ try_again:
 		} else
 			sprintf (save_file, "%stmp%d.dem", DEMO_DIR, tmpcnt++);
 		remove(save_file);
-		rename(DEMO_FILENAME, save_file);
+		PHYSFSX_rename(DEMO_FILENAME, save_file);
 		return;
 	}
 	if (exit == -1) {               // pressed ESC
-		remove(DEMO_FILENAME);      // might as well remove the file
+		PHYSFS_delete(DEMO_FILENAME);   // might as well remove the file
 		return;                     // return without doing anything
 	}
 
@@ -3845,43 +3848,29 @@ try_again:
 	else
 		strcat(fullname, m[0].text);
 	strcat(fullname, ".dem");
-	remove(fullname);
-	rename(DEMO_FILENAME, fullname);
+	PHYSFS_delete(fullname);
+	PHYSFSX_rename(DEMO_FILENAME, fullname);
 }
 
 //returns the number of demo files on the disk
 int newdemo_count_demos()
 {
-	FILEFINDSTRUCT find;
+	char **find, **i;
 	int NumFiles=0;
 
-	if( !FileFindFirst( DEMO_DIR "*.dem", &find ) ) {
-		do {
-			NumFiles++;
-		} while( !FileFindNext( &find ) );
-		FileFindClose();
-	}
+	find = PHYSFS_enumerateFiles(DEMO_DIR);
 
-#if 0
-	if ( AltHogdir_initialized ) {
-		char search_name[PATH_MAX + 5];
-		strcpy(search_name, AltHogDir);
-		strcat(search_name, "/" DEMO_DIR "*.dem");
-		if( !FileFindFirst( search_name, &find ) ) {
-			do {
-				NumFiles++;
-			} while( !FileFindNext( &find ) );
-			FileFindClose();
-		}
-	}
-#endif
+	for (i = find; *i != NULL; i++)
+		NumFiles++;
+
+	PHYSFS_freeList(find);
 
 	return NumFiles;
 }
 
 void newdemo_start_playback(char * filename)
 {
-	FILEFINDSTRUCT find;
+	char **find = NULL, **i;
 	int rnd_demo = 0;
 	char filename2[PATH_MAX+FILENAME_LEN] = DEMO_DIR;
 
@@ -3891,7 +3880,10 @@ void newdemo_start_playback(char * filename)
 	First_time_playback=1;
 	JasonPlaybackTotal=0;
 
-	if (filename==NULL) {
+	if (filename)
+		strcat(filename2, filename);
+	else
+	{
 		// Randomly pick a filename
 		int NumFiles = 0, RandFileNum;
 		rnd_demo = 1;
@@ -3903,53 +3895,26 @@ void newdemo_start_playback(char * filename)
 		}
 		RandFileNum = d_rand() % NumFiles;
 		NumFiles = 0;
-		if( !FileFindFirst( DEMO_DIR "*.dem", &find ) ) {
-			do {
-				if ( NumFiles==RandFileNum ) {
-					filename = (char *)&find.name;
-					break;
-				}
-				NumFiles++;
-			} while( !FileFindNext( &find ) );
-			FileFindClose();
-		}
 
-#if 0
-		if ( filename == NULL && AltHogdir_initialized ) {
-			char search_name[PATH_MAX + 5];
-			strcpy(search_name, AltHogDir);
-			strcat(search_name, "/" DEMO_DIR "*.dem");
-			if( !FileFindFirst( search_name, &find ) ) {
-				do {
-					if ( NumFiles==RandFileNum ) {
-						filename = (char *)&find.name;
-						break;
-					}
-					NumFiles++;
-				} while( !FileFindNext( &find ) );
-				FileFindClose();
+		find = PHYSFS_enumerateFiles(DEMO_DIR);
+
+		for (i = find; *i != NULL; i++)
+		{
+			if (NumFiles == RandFileNum)
+			{
+				strcat(filename2, *i);
+
+				break;
 			}
+			NumFiles++;
 		}
-#endif
+		PHYSFS_freeList(find);
 
-		if ( filename==NULL) return;
+		if (NumFiles > RandFileNum)
+			return;
 	}
 
-	if (!filename)
-		return;
-
-	strcat(filename2,filename);
-
-	infile = fopen( filename2, "rb" );
-
-#if 0
-	if (infile==NULL && AltHogdir_initialized) {
-		strcpy(filename2, AltHogDir);
-		strcat(filename2, "/" DEMO_DIR);
-		strcat(filename2, filename);
-		infile = fopen( filename2, "rb" );
-	}
-#endif
+	infile = PHYSFS_openRead(filename2);
 
 	if (infile==NULL) {
 		mprintf( (0, "Error reading '%s'\n", filename ));
@@ -3963,7 +3928,7 @@ void newdemo_start_playback(char * filename)
 	strncpy(nd_save_callsign, Players[Player_num].callsign, CALLSIGN_LEN);
 	Viewer = ConsoleObject = &Objects[0];   // play properly as if console player
 	if (newdemo_read_demo_start(rnd_demo)) {
-		fclose(infile);
+		PHYSFS_close(infile);
 		return;
 	}
 
@@ -3971,7 +3936,7 @@ void newdemo_start_playback(char * filename)
 	Newdemo_state = ND_STATE_PLAYBACK;
 	Newdemo_vcr_state = ND_STATE_PLAYBACK;
 	Newdemo_old_cockpit = Cockpit_mode;
-	Newdemo_size = filelength(fileno(infile));
+	Newdemo_size = PHYSFS_fileLength(infile);
 	nd_bad_read = 0;
 	Newdemo_at_eof = 0;
 	NewdemoFrameCount = 0;
@@ -3986,7 +3951,7 @@ void newdemo_start_playback(char * filename)
 
 void newdemo_stop_playback()
 {
-	fclose( infile );
+	PHYSFS_close(infile);
 	Newdemo_state = ND_STATE_NORMAL;
 #ifdef NETWORK
 	change_playernum_to(0);             //this is reality
@@ -4005,15 +3970,15 @@ void newdemo_stop_playback()
 
 void newdemo_strip_frames(char *outname, int bytes_to_strip)
 {
-	FILE *outfile;
+	PHYSFS_file *outfile;
 	char *buf;
 	int total_size, bytes_done, read_elems, bytes_back;
 	int trailer_start, loc1, loc2, stop_loc, bytes_to_read;
 	short last_frame_length;
 
 	bytes_done = 0;
-	total_size = filelength(fileno(infile));
-	outfile = fopen(outname, "wb");
+	total_size = PHYSFS_fileLength(infile);
+	outfile = PHYSFS_openWrite(outname);
 	if (outfile == NULL) {
 		newmenu_item m[1];
 
@@ -4028,45 +3993,45 @@ void newdemo_strip_frames(char *outname, int bytes_to_strip)
 
 		m[ 0].type = NM_TYPE_TEXT; m[ 0].text = "Can't malloc output buffer";
 		newmenu_do( NULL, NULL, 1, m, NULL );
-		fclose(outfile);
+		PHYSFS_close(outfile);
 		newdemo_stop_playback();
 		return;
 	}
 	newdemo_goto_end();
-	trailer_start = ftell(infile);
-	fseek(infile, 11, SEEK_CUR);
+	trailer_start = PHYSFS_tell(infile);
+	PHYSFS_seek(infile, PHYSFS_tell(infile) + 11);
 	bytes_back = 0;
 	while (bytes_back < bytes_to_strip) {
-		loc1 = ftell(infile);
-		//fseek(infile, -10, SEEK_CUR);
+		loc1 = PHYSFS_tell(infile);
+		//PHYSFS_seek(infile, PHYSFS_tell(infile) - 10);
 		//nd_read_short(&last_frame_length);
-		//fseek(infile, 8 - last_frame_length, SEEK_CUR);
+		//PHYSFS_seek(infile, PHYSFS_tell(infile) + 8 - last_frame_length);
 		newdemo_back_frames(1);
-		loc2 = ftell(infile);
+		loc2 = PHYSFS_tell(infile);
 		bytes_back += (loc1 - loc2);
 	}
-	fseek(infile, -10, SEEK_CUR);
+	PHYSFS_seek(infile, PHYSFS_tell(infile) - 10);
 	nd_read_short(&last_frame_length);
-	fseek(infile, -3, SEEK_CUR);
-	stop_loc = ftell(infile);
-	fseek(infile, 0, SEEK_SET);
+	PHYSFS_seek(infile, PHYSFS_tell(infile) - 3);
+	stop_loc = PHYSFS_tell(infile);
+	PHYSFS_seek(infile, 0);
 	while (stop_loc > 0) {
 		if (stop_loc < BUF_SIZE)
 			bytes_to_read = stop_loc;
 		else
 			bytes_to_read = BUF_SIZE;
-		read_elems = fread(buf, 1, bytes_to_read, infile);
-		fwrite(buf, 1, read_elems, outfile);
+		read_elems = PHYSFS_read(infile, buf, 1, bytes_to_read);
+		PHYSFS_write(outfile, buf, 1, read_elems);
 		stop_loc -= read_elems;
 	}
-	stop_loc = ftell(outfile);
-	fseek(infile, trailer_start, SEEK_SET);
-	while ((read_elems = fread(buf, 1, BUF_SIZE, infile)) != 0)
-		fwrite(buf, 1, read_elems, outfile);
-	fseek(outfile, stop_loc, SEEK_SET);
-	fseek(outfile, 1, SEEK_CUR);
-	fwrite(&last_frame_length, 2, 1, outfile);
-	fclose(outfile);
+	stop_loc = PHYSFS_tell(outfile);
+	PHYSFS_seek(infile, trailer_start);
+	while ((read_elems = PHYSFS_read(infile, buf, 1, BUF_SIZE)) != 0)
+		PHYSFS_write(outfile, buf, 1, read_elems);
+	PHYSFS_seek(outfile, stop_loc);
+	PHYSFS_seek(outfile, PHYSFS_tell(infile) + 1);
+	PHYSFS_write(outfile, &last_frame_length, 2, 1);
+	PHYSFS_close(outfile);
 	newdemo_stop_playback();
 
 }
